# housing_prices

./: .gitignore  README.md  housing_prices.ipynb  pyproject.toml  requirements.txt
data/: Central2024testP.csv
data/processed/: central_test.csv  central_train.csv  external_metrics.csv  holdout_metrics.csv  model_comparison.csv
models/: best_model_XGBoost.joblib
